# advent-of-code

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  example-setup.cfg  pyproject.toml  setup.py
src/advent_of_code/: processing.py
src/advent_processing/: CMakeLists.txt  bindings.cpp  day.h  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h
